--- a/thunderbird/build.gradle
+++ b/thunderbird/build.gradle
@@ -57,7 +57,17 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
+    testOptions.unitTests.all {
+        testLogging {
+            events 'passed', 'skipped', 'failed', 'standardOut', 'standardError'
+            exceptionFormat 'full'
+        }
+    }
+
 }
+
+
 
 dependencies {
     compile libraries.dagger
