--- a/thunderbird/src/main/AndroidManifest.xml
+++ b/thunderbird/src/main/AndroidManifest.xml
@@ -1,6 +1,9 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="zeta.android.thunderbird">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="zeta.android.thunderbird">
 
-    <application android:allowBackup="true" android:label="@string/app_name"
+    <application
+        android:allowBackup="true"
+        android:label="@string/app_name"
         android:supportsRtl="true">
 
     </application>
