--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,6 +52,7 @@ android {
         release {
             minifyEnabled true
             zipAlignEnabled
+            shrinkResources true
             debuggable false
             useProguard true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
@@ -114,13 +115,16 @@ android {
         exclude 'META-INF/NOTICE.txt'
         exclude 'META-INF/LICENSE'
         exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/MANIFEST.MF'
+        exclude 'META-INF/rxjava.properties'
+        exclude 'META-INF/services/javax.annotation.processing.Processor'
         exclude 'com/sun/jna/aix-ppc/libjnidispatch.a'
         exclude 'com/sun/jna/darwin/libjnidispatch.jnilib'
         exclude 'com/sun/jna/win32-x86-64/jnidispatch.dll'
         exclude 'com/sun/jna/win32-x86/jnidispatch.dll'
         exclude 'com/sun/jna/win32ce-arm/jnidispatch.dll'
         exclude 'com/sun/jna/w32ce-arm/jnidispatch.dll'
-        exclude 'META-INF/services/javax.annotation.processing.Processor'
+        exclude 'jsr305_annotations/Jsr305_annotations.gwt.xml'
     }
 
     // This allows us see tests execution progress in the output on the CI.
