--- a/thunderbird/build.gradle
+++ b/thunderbird/build.gradle
@@ -58,10 +58,17 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
 
+    // This allows us see tests execution progress in the output on the CI.
     testOptions.unitTests.all {
         testLogging {
             events 'passed', 'skipped', 'failed', 'standardOut', 'standardError'
             exceptionFormat 'full'
+        }
+        //Print the test result summary
+        afterSuite { desc, result ->
+            if (!desc.parent) { // will match the outermost suite
+                println "Thunderbird Test Results: ${result.resultType} (${result.testCount} tests, ${result.successfulTestCount} successes, ${result.failedTestCount} failures, ${result.skippedTestCount} skipped)"
+            }
         }
     }
 
