--- a/app/build.gradle
+++ b/app/build.gradle
@@ -233,7 +233,9 @@ dependencies {
     //DEVELOPER TOOLS
     compile libraries.timber
     debugCompile libraries.lynx
-    debugCompile libraries.stetho
+    debugCompile(libraries.stetho) {
+        exclude module: 'jsr305'
+    }
     debugCompile libraries.tinyDancer
     debugCompile libraries.leakcanary
     releaseCompile libraries.leakcanaryNoOp
@@ -249,12 +251,15 @@ dependencies {
 
     androidTestCompile libraries.dexmaker
     androidTestCompile libraries.mockitoCore
-    androidTestCompile libraries.espressoCore
+    androidTestCompile(libraries.espressoCore) {
+        exclude module: 'jsr305'
+    }
     androidTestCompile libraries.dexmakerMockito
     androidTestCompile libraries.supportTestRules
     androidTestCompile libraries.supportTestRunner
     androidTestCompile(libraries.espressoContrib) {
         // Causes IncompatibleClassChangeError. As always…
+        exclude module: 'jsr305'
         exclude module: 'support-annotations'
         exclude module: 'recyclerview-v7'
         exclude module: 'support-v4'
