--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -76,6 +76,8 @@ ext.versions = [
         retroLambdaPluginVersion              : "3.6.1",
         retrolombokPluginVersion              : "0.2.3.a2",
         gmsServicesPluginVersion              : "3.0.0",
+
+        powerMockitoVersion               : '1.6.2',
 ]
 
 ext.gradlePlugins = [
@@ -226,5 +228,10 @@ ext.libraries = [
 
         espressoCore                   : "com.android.support.test.espresso:espresso-core:$versions.espressoVersion",
         espressoContrib                : "com.android.support.test.espresso:espresso-contrib:$versions.espressoVersion",
+
+        powerMockitoJunit          : "org.powermock:powermock-module-junit4-rule:$versions.powerMockitoVersion",
+        powerMockitoJunitRule       : "org.powermock:powermock-module-junit4:$versions.powerMockitoVersion",
+        powerMockitoApi            : "org.powermock:powermock-api-mockito:$versions.powerMockitoVersion",
+        powerMockitoClassLoading   : "org.powermock:powermock-classloading-xstream:$versions.powerMockitoVersion",
         //endregion
 ]
