--- a/app/build.gradle
+++ b/app/build.gradle
@@ -159,7 +159,7 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    implementation project(':thunderbird')
+    api project(':thunderbird')
 
     //SUPPORT LIBS
     implementation libraries.supportV13
