--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -32,7 +32,7 @@ ext.versions = [
 
         gsonVersion                           : "2.8",
         cookiesJarVersion                     : "v1.0.0",
-        networkSamplerVersion                 : "connectionclass:1.0.1",
+        networkSamplerVersion                 : "1.0.1",
 
         okIoVersion                           : "1.11.0",
         okHttp3Version                        : "3.5.0",
@@ -72,7 +72,7 @@ ext.versions = [
 
         aptPluginVersion                      : "1.8",
         fabricPluginVersion                   : "1.22.1",
-        gradlePluginVersion                   : "3.0.0-alpha4",
+        gradlePluginVersion                   : "3.0.0-alpha6",
         frodoPluginVersion                    : "0.8.3",
         gmsServicesPluginVersion              : "3.0.0",
 
@@ -146,7 +146,7 @@ ext.libraries = [
 
         gson                           : "com.google.code.gson:gson:$versions.gsonVersion",
 
-        networkSampler                 : "com.facebook.network.connectionclass:$versions.networkSamplerVersion",
+        networkSampler                 : "com.facebook.network.connectionclass:connectionclass:$versions.networkSamplerVersion",
         persistentCookieJar            : "com.github.franmontiel:PersistentCookieJar:$versions.cookiesJarVersion",
         //endregion
 
