--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,8 @@ android {
         versionName "1.0.3"
         multiDexEnabled false
 
+        resConfigs "en"
+
         javaCompileOptions {
             annotationProcessorOptions {
                 includeCompileClasspath false
