Gradle plugin for the firebase perf

--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,9 @@ buildscript {
         classpath gradlePlugins.fabricPlugin
         classpath gradlePlugins.androidToolsPlugin
         classpath gradlePlugins.gmsServicesPlugin
+        classpath (gradlePlugins.firebasePlugin) {
+            exclude group: 'com.google.guava', module: 'guava-jdk5'
+        }
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
