--- a/build.gradle
+++ b/build.gradle
@@ -124,9 +124,9 @@ subprojects {
         def checkTask = tasks.findByName('check')
 
         //Disabled for now
-        checkTask.dependsOn('pmd')
+        //checkTask.dependsOn('pmd')
         //checkTask.dependsOn('findbugs')
-        checkTask.dependsOn('checkstyle')
+        //checkTask.dependsOn('checkstyle')
 
         // Log instrumentation tests results.
         tasks.withType(AndroidTestTask) { task ->
