--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,5 @@
 apply plugin: 'com.android.application'
-//apply plugin: 'com.google.firebase.firebase-perf'
+apply plugin: 'com.google.firebase.firebase-perf'
 apply plugin: 'com.fernandocejas.frodo'
 apply plugin: 'io.fabric'
 
@@ -47,6 +47,7 @@ android {
         debug {
             applicationIdSuffix ".debug"
             minifyEnabled true
+            useProguard false
             debuggable true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
