--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -74,7 +74,7 @@ ext.versions = [
         fabricPluginVersion                   : "1.22.1",
         gradlePluginVersion                   : "3.0.0-alpha7",
         frodoPluginVersion                    : "0.8.3",
-        gmsServicesPluginVersion              : "3.0.0",
+        gmsServicesPluginVersion              : "3.1.0",
         firebasePluginVersion                 : "1.1.0",
 ]
 
@@ -114,8 +114,9 @@ ext.libraries = [
         //endregion
 
         //region firebase
-        appIndexing                    : "com.google.firebase:firebase-appindexing:$versions.playServicesVersion",
         firebasePerf                   : "com.google.firebase:firebase-perf:$versions.playServicesVersion",
+        firebaseConfig                 : "com.google.firebase:firebase-config:$versions.playServicesVersion",
+        firebaseAppIndexing            : "com.google.firebase:firebase-appindexing:$versions.playServicesVersion",
         //endregion
 
         //region facebook
