--- a/app/build.gradle
+++ b/app/build.gradle
@@ -168,6 +168,7 @@ dependencies {
     implementation libraries.supportRecyclerView
 
     //Firebase
+    implementation libraries.firebaseCore
     implementation libraries.firebasePerf
     implementation libraries.firebaseConfig
 
