--- a/build.gradle
+++ b/build.gradle
@@ -126,7 +126,7 @@ subprojects {
         //Disabled for now
         checkTask.dependsOn('pmd')
         //checkTask.dependsOn('findbugs')
-        checkTask.dependsOn('checkstyle')
+        //checkTask.dependsOn('checkstyle')
 
         // Log instrumentation tests results.
         tasks.withType(AndroidTestTask) { task ->
