--- a/app/build.gradle
+++ b/app/build.gradle
@@ -166,6 +166,7 @@ dependencies {
     implementation libraries.supportDesign
     implementation libraries.supportAppCompat
     implementation libraries.supportRecyclerView
+    implementation libraries.supportAnnotations
 
     //Firebase
     implementation libraries.firebaseCore
@@ -276,7 +277,6 @@ dependencies {
         exclude module: 'recyclerview-v7'
         exclude module: 'support-v4'
     }
-    implementation 'com.android.support:support-annotations:26.0.0-beta2'
 }
 
 configurations.all {
